# desktop-cat

./: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: input_listener.rs  lib.rs
src-tauri/src/core/: device.rs  mod.rs
src-tauri/src/core/setup/: common.rs  mod.rs
src-tauri/src/utils/: fs_extra.rs
src/animation/: animations.css  spriteConfig.ts
src/components/: Cat.tsx  CatSprite.tsx  ChatRoom.css  ChatRoom.tsx  FloatingChatInput.css  FloatingChatInput.tsx  GamepadOverlay.tsx  KeyboardOverlay.tsx  PersonalityEditor.css  PersonalityEditor.tsx  SpeechBubble.css  SpeechBubble.tsx
src/constants/: index.ts
src/engine/: animationMapper.ts  inputSystem.ts  keyZoneDetector.ts  petEngine.ts  petStateMachine.ts
src/engine/renderer/: Renderer.ts  SpriteRenderer.ts
src/hooks/: useCatBehavior.ts  useDrag.ts  useKeyPress.ts
src/runtime/core/: DisposableStack.ts  EventBus.ts  Logger.ts  Runtime.ts  RuntimeManager.ts  Scheduler.ts
src/runtime/systems/: createAnimationRuntime.ts  createAppRuntime.ts  createGamepadRuntime.ts  createInputRuntime.ts  createRendererRuntime.ts  createWindowRuntime.ts
src/services/: llm.ts  memory.ts
src/statemachine/: README.md
src/stores/: appStore.ts  modelStore.ts  runtimeStore.ts  settingsStore.ts  useChatStore.ts  useMemoryStore.ts  usePetStore.ts
src/types/: input.ts  pet.ts
src/utils/: is.ts  keyboard.ts  monitor.ts  path.ts  platform.ts
